--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="password">Password</string>
     <string name="sign_in">Sign in</string>
     <string name="not_a_member_sign_up">Not a member? Sign up!</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="register">Sign up</string>
+    <string name="e_mail">E-mail</string>
+    <string name="already_a_member_sign_in">Already a member? Sign In!</string>
 </resources>
