--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="register">Sign up</string>
     <string name="e_mail">E-mail</string>
     <string name="already_a_member_sign_in">Already a member? Sign In!</string>
+    <string name="newSlikovnica">New</string>
+    <string name="archive">Archive</string>
+    <string name="explore">Explore</string>
 </resources>
