--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">Project</string>
+    <string name="app_name">Picture Books</string>
+
+    <!-- Login and Register -->
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="sign_in">Sign in</string>
@@ -9,10 +11,20 @@
     <string name="register">Sign up</string>
     <string name="e_mail">E-mail</string>
     <string name="already_a_member_sign_in">Already a member? Sign In!</string>
-    <string name="newSlikovnica">New</string>
-    <string name="archive">Archive</string>
-    <string name="explore">Explore</string>
     <string name="forgot_your_password">Forgot your password?</string>
     <string name="reset_password">Reset Password</string>
     <string name="back_to_login">Back to login</string>
+
+    <!-- Main Menu -->
+    <string name="newSlikovnica">New</string>
+    <string name="archive">Archive</string>
+    <string name="explore">Explore</string>
+
+    <!-- User Profile Settings -->
+    <string name="change_password">change password</string>
+    <string name="change_email">change e-mail</string>
+    <string name="delete_account">delete account</string>
+    <string name="sign_out">sign out</string>
+    <string name="new_password">New password</string>
+    <string name="confirm_new_password">Confirm new password</string>
 </resources>
