--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,8 @@
     <string name="new_password">New password</string>
     <string name="confirm_new_password">Confirm new password</string>
     <string name="save">Save</string>
+    <string name="delete_account_dialog">Are you sure you want to delete this account?</string>
+    <string name="confirm">Yes</string>
+    <string name="cancel">Cancel</string>
+    <string name="sign_out_dialog">Are you sure you want to sign out?</string>
 </resources>
