--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,10 @@
     <string name="confirm">Yes</string>
     <string name="cancel">Cancel</string>
     <string name="sign_out_dialog">Are you sure you want to sign out?</string>
+
+    <!-- New Picturebook -->
+    <string name="discard">Discard</string>
+    <string name="title">Title</string>
+    <string name="summary">Summary</string>
+    <string name="discard_picturebook_dialog">Are you sure you want to discard this picturebook?</string>
 </resources>
