--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="title">Title</string>
     <string name="summary">Summary</string>
     <string name="discard_picturebook_dialog">Are you sure you want to discard this picturebook?</string>
+    <string name="add_page">Add page</string>
 </resources>
