Added change profile picture activity; choose image from gallery and save it to storage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="confirm">Yes</string>
     <string name="cancel">Cancel</string>
     <string name="sign_out_dialog">Are you sure you want to sign out?</string>
+    <string name="choose_picture">Choose picture</string>
+    <string name="save_picture">Save picture</string>
 </resources>
