--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="delete_profile_picture">Are you sure you want to delete profile picture?</string>
   
     <!-- New Picturebook -->
+    <string name="picturebookId">picturebookId</string>
     <string name="discard">Discard</string>
     <string name="title">Title</string>
     <string name="summary">Summary</string>
