--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,8 @@
     <string name="title_single_picturebook">Title:</string>
     <string name="summary_single_picturebook">Summary:</string>
     <string name="delete_single_picturebook_dialog">Are you sure you want to delete this picturebook?</string>
+    <string name="e_mail_word">e-mail:</string>
+    <string name="first_name_word">first name:</string>
+    <string name="last_name_word">last name:</string>
 
 </resources>
