--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="title_single_picturebook">Title:</string>
     <string name="summary_single_picturebook">Summary:</string>
     <string name="delete_single_picturebook_dialog">Are you sure you want to delete this picturebook?</string>
+    <string name="edit_pages">edit pages</string>
 
 
 </resources>
