--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,10 +56,12 @@
     <string name="publish">Publish</string>
     <string name="picturebook_id">picturebookId</string>
     <string name="delete_picture_book">Delete picture book</string>
-    <string name="status">status:</string>
+    <string name="status">Status:</string>
     <string name="title_single_picturebook">Title:</string>
     <string name="summary_single_picturebook">Summary:</string>
     <string name="delete_single_picturebook_dialog">Are you sure you want to delete this picturebook?</string>
+    <string name="author">Author:</string>
+    <string name="follow">Follow</string>
 
 
 </resources>
