Small fixes in design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,6 @@
     <string name="caption">caption:</string>
     <string name="take_picture">Take picture</string>
     <string name="photo">Photo</string>
+    <string name="new_page">new</string>
 
 </resources>
