--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="e_mail_word">e-mail:</string>
     <string name="first_name_word">first name:</string>
     <string name="last_name_word">last name:</string>
-
+    <string name="take_picture">Take picture</string>
 
     <!-- New Picturebook -->
     <string name="picturebookId">picturebookId</string>
@@ -60,14 +60,15 @@
     <string name="title_single_picturebook">Title:</string>
     <string name="summary_single_picturebook">Summary:</string>
     <string name="delete_single_picturebook_dialog">Are you sure you want to delete this picturebook?</string>
-
-    <string name="author">Author:</string>
-    <string name="follow">Follow</string>
-
     <string name="edit_pages">edit pages</string>
     <string name="reset">reset</string>
     <string name="caption">caption:</string>
-    <string name="take_picture">Take picture</string>
+
+    <!-- Explore -->
+    <string name="author">Author:</string>
+    <string name="follow">Follow</string>
+
+    <!-- New Page -->
     <string name="photo">Photo</string>
     <string name="new_page">new</string>
 
